# stellar

./: .gitignore  ABOUT_STELLAR.md  FIXME.md  MIGRATION_STATUS.md  ONBOARDING_PLAN.md  README.md  STUDENT_PRO_ROADMAP.md  idea.md  index.html  migration-plan.md  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
.github/workflows/: README.md  ci.yml  release.yml  version-bump.yml
docs/: focus-mode.md  graphrag-implementation-plan.md  hotkey-system-usage.md  leader-key-usage.md  theme-system.md  ui-hotkey-analysis.md
public/: browserconfig.xml  manifest.json
scripts/: generate-icons.md  integration_test_setup.sh  run_marker.sh  setup_marker.sh  setup_markitdown.sh  test_setup_marker.sh
src/: app.css  app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: background_processor.rs  database.rs  lib.rs  main.rs  pdf_processor.rs
src-tauri/src/ai/: mod.rs  providers.rs  types.rs
src-tauri/src/commands/: actions.rs  ai.rs  background_processing.rs  database.rs  embeddings.rs  flashcards.rs  mod.rs  pdf.rs  pdf_tests.rs
src-tauri/src/database/: README.md  api_keys.rs  categories.rs  database.rs  documents.rs  flashcards.rs  mod.rs  processing_jobs.rs  sessions.rs  types.rs
src-tauri/src/embeddings/: chunking.rs  cloud.rs  local.rs  mod.rs  types.rs  vector.rs
src-tauri/src/pdf_processor/: tests.rs
src-tauri/stellar_data/: documents.db
src/components/: logo.tsx  theme-aware-logo.tsx  theme-provider.tsx  theme-switcher.tsx
src/hooks/: use-chat.ts  use-debounced-action.ts  use-fork-ref.ts  use-text-selection.ts  use-toast.ts
src/lib/: actions-service.ts  ai-service.ts  ai-store.ts  app-initialization.ts  utils.ts  (+9 more)
(+178 files in other folders)
