[package]
name = "stellar"
version = "0.0.2"
description = "A modern study and research application with advanced PDF processing, AI integration, and document management"
authors = ["mask"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stellar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
lopdf = "0.32"
pulldown-cmark = "0.11"
chrono = { version = "0.4", features = ["serde"] }
pdf-extract = "0.7"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
regex = "1.0"
base64 = "0.21"
dirs = "5.0"
# Embedding dependencies with sqlite-vec
rusqlite = { version = "0.30", features = ["bundled"] }
sqlite-vec = "0.1"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.3"
tokenizers = "0.20"
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.0"


